working on info windows

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                  });
         marker.setMap(map);
         markers.push(marker);
-//        var infowindow = new google.maps.InfoWindow({content: name + "<br \>" + address});
+        var infowindow = new google.maps.InfoWindow({content: name + "<br \>" + address});
 //        infowindow.open(map,marker);
      }
     
