adding in detail

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <input type="button" value="Map" id="createButton" onclick="geocode()"/>
         <input type="button" value="Reset" id="resetButton" onclick="clearExisting()"/>
         <div id="fireStationListing">
-            <h5>Fire Stations</h5>
+            <h5>Closest Fire Stations by Driving Distance</h5>
             <ul id="fireStationList">
             </ul>
         </div>
