using local geoxml3 file since old link was not under https

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&key=AIzaSyBu1DXFY5xAmdAXBFo62dAHdE7shzphfTU"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-  <script type="text/javascript" src="http://geoxml3.googlecode.com/svn/branches/polys/geoxml3.js"></script>
+  <script type="text/javascript" src="/js/geoxml3.js"></script>
 
   <script type="text/javascript">
     var map;
