--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
    </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&key=AIzaSyBu1DXFY5xAmdAXBFo62dAHdE7shzphfTU"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu1DXFY5xAmdAXBFo62dAHdE7shzphfTU&libraries=places"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript" src="js/geoxml3.js"></script>
 
@@ -40,6 +40,7 @@
     // Loading Visualization package version 1
     google.load('visualization', '1');
     google.setOnLoadCallback(setupMap);
+    google.setOnLoadCallback(initAutocomplete);
 
     function setupMap(){
        var lat = 33.675314;
@@ -54,7 +55,15 @@
        map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
     }
 
-    function initialize() {}
+    function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+        autocomplete = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */(document.getElementById('address')),
+            {types: ['geocode']});
+
+        autocomplete.addListener('place_changed', geocode);
+    }
 
     function geocode(){
        clearExisting();
@@ -171,18 +180,15 @@
           infowindow.close();
         } catch(e) {}
      }
-
-     google.maps.event.addDomListener(window, 'load', initialize);
    </script>
   </head>
 
 
   <body>
     <div id="sidebar" class="column one-third">
-        <strong>Address: </strong>
-        <input id="address" size="40" />
+        <strong>Address:</strong>
+        <input id="address" size="40" type="text"/>
         <br />
-        <input type="button" value="Map" id="createButton" onclick="geocode()"/>
         <input type="button" value="Reset" id="resetButton" onclick="clearExisting()"/>
         <div id="fireStationListing">
             <h5>Closest Fire Stations by Driving Distance</h5>
